--- a/src/app/pages/dashboard/add-escrow/add-escrow.component.html
+++ b/src/app/pages/dashboard/add-escrow/add-escrow.component.html
@@ -15,7 +15,7 @@
 
         <div class="content-inside m-3">
             <div class="escrow-tabs d-flex p-4">
-                <div class="nav flex-column nav-pills me-3 gap-2">
+                <div class="nav flex-column nav-pills me-3 gap-2 mb-sm-3 align-items-start">
                     <button *ngFor="let tab of tabs" class="nav-link text-start" [ngClass]="{ active: selectedTab === tab.key }"
                         (click)="selectTab(tab.key)" type="button">
                          <img [src]="tab.icon" alt="sprint excode"  class="pe-2"/> {{ tab.label }}
