--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -3,7 +3,7 @@
         these events occur and all parties have completed a thorough review.</p>
 
     <div class="mb-3">
-        <div class="upload-doc position-relative w-50">
+        <div class="upload-doc position-relative">
             <label class="custom-file-upload">
                 <img src="assets/img/upload.png" class="me-2">
                 <div class="d-flex flex-column">
