--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -7,6 +7,11 @@ table {
 }
 
 .deposit-table{
+        background: #fff;
+    border: 1px solid #E6EFF5;
+    border-radius: 10px;
+    align-items: center;
+
     table{
         font-size:16px;
             
