--- a/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.html
@@ -127,7 +127,7 @@
                 <div *ngIf="form.get('entity_type')?.value !== 'new' && form.get('rep_profile_pic')?.value">
                     <p class="mb-1">
                         <a [href]="form.get('rep_profile_pic')?.value" target="_blank" class="text-decoration-none">
-                            👁️ View Uploaded Image
+                            <img src="assets/img/view.png" class="pe-2"> View Uploaded Image
                         </a>
                     </p>
                     <!-- <button type="button" class="btn btn-outline-danger btn-sm" (click)="clearRepPhoto()">
