--- a/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
@@ -32,13 +32,17 @@
 
       <ng-template #showEditDepositor>
         <div class="mt-3">
-          <h3>Depositor Details</h3>
-          <p class="mb-1">Depositor Company Name: {{ depositor.company_name }}</p>
-          <p class="mb-1">Depositor Company PAN: {{ depositor.company_pan }}</p>
-          <p class="mb-1">Depositor CIN: {{ depositor.company_cin }}</p>
-          <button type="button" class="btn btn-outline-secondary btn-sm" >
-            Edit
+          <div class="d-flex justify-content-between">
+                 <h5 class="mb-1">Depositor Details</h5>
+             <button type="button" class="border-0 bg-transparent">
+          <img src="assets/img/edit2.png">
           </button>
+          </div>
+     
+          <div class="d-flex justify-content-between"> <p class="mb-0">Depositor Company Name:</p><p class="mb-0">{{ depositor.company_name }}</p></div>
+           <div class="d-flex justify-content-between"> <p class="mb-0">Depositor Company PAN:</p><p class="mb-0">{{ depositor.company_pan }}</p></div>
+                 <div class="d-flex justify-content-between"> <p class="mb-0">Depositor CIN:</p><p class="mb-0">{{ depositor.company_cin }}</p></div>
+       
         </div>
       </ng-template>
 
