--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -124,7 +124,7 @@
 
       <div class="deposit-table mt-3">
         <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/escrow/list'" [pageSize]="10"
-          (action)="onTableAction($event)">
+       [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
         </dynamic-table>
         <!-- <table class="table">
           <thead>
