--- a/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.scss
+++ b/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.scss
@@ -1,4 +1,5 @@
-.ng-select.ng-select-single .ng-select-container {
+.ng-select-container {
     padding: 12px 15px;
     border: 1px solid #E6EFF5;
+    height:50px;
 }
