--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="filter-box d-flex gap-4 p-3 mt-3">
+      <!-- <div class="filter-box d-flex gap-4 p-3 mt-3">
         <h4>Filter</h4>
         <form class="d-flex justify-content-between align-items-center w-100 flex-wrap">
           <div class="d-flex gap-3 flex-wrap mb-2">
@@ -116,7 +116,7 @@
 
         </form>
 
-      </div>
+      </div> -->
       <div class="d-flex justify-content-between my-3">
         <h5 class="mt-3 text-primary">Your Escrow Deposits</h5>
         <button class="btn btn-primary" (click)="addNew()">Add New</button>
