--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -4,6 +4,8 @@
                     data-bs-target="#responsiveSidebar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
+  <img src="assets/img/logo-red.png" alt="Logo">
             </div>
         </nav>
 <!-- Offcanvas -->
@@ -15,7 +17,9 @@
     <h5 class="offcanvas-title">
       <img src="assets/img/logo-red.png" alt="Logo">
     </h5>
-    <button  type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <button  type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
+
+    </button>
   </div>
   <div class="offcanvas-body">
     <ul class="nav flex-column w-100">
