--- a/src/assets/scss/pages/_dashboard.scss
+++ b/src/assets/scss/pages/_dashboard.scss
@@ -2,8 +2,6 @@
 @use "../config/mixins" as *;
 @use "../config/extends" as *;
 
-
-
 .wrapper {
   transition: all 0.5s ease;
   position: relative;
@@ -17,66 +15,67 @@
   }
 }
 
-
-.topbar{
-   background:$white;
-    margin-bottom: 0;
-    padding:24px 15px;
+.topbar {
+  background: $white;
+  margin-bottom: 0;
+  padding: 24px 15px;
 }
-.notification{
-background-color: #fff1e2;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    padding: 10px 25px;
-    gap: 30px;
-    a{
-        color:$black;
-        text-decoration:none;
-        font-weight:700;
-    }
+.notification {
+  background-color: #fff1e2;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 10px 25px;
+  gap: 30px;
+  flex-wrap: wrap;
+  a {
+    color: $black;
+    text-decoration: none;
+    font-weight: 700;
+  }
 }
-.user-card{
-    background:$white;
-    border:1px solid #F7F7F7;
-    border-radius:15px;
-    h4{
-        font-weight:$normal;
-    }
-    .box{
-        background:#DAEEFF;
-        border-radius:20px;
-        width:82px;
-        height:93px;
+.user-card {
+  background: $white;
+  border: 1px solid #f7f7f7;
+  border-radius: 15px;
+  h4 {
+    font-weight: $normal;
+  }
+  .box {
+    background: #daeeff;
+    border-radius: 20px;
+    width: 82px;
+    height: 93px;
 
-        &.box-pink{
-            background:#FFD9DC;
-        }
+    &.box-pink {
+      background: #ffd9dc;
     }
-    .box-img{
+  }
+  .box-img {
     position: absolute;
     top: 20px;
     left: -22px;
-    }
+  }
 }
-.filter-box{
-    background:$white;
-    border:1px solid $gray4;
-    border-radius:10px;
-    align-items: center;
+.filter-box {
+  background: $white;
+  border: 1px solid $gray4;
+  border-radius: 10px;
+  align-items: center;
 
-form{
-    .form-select,.form-control{
-    border: 1px solid $gray4;
-    height: 55px;
-    border-radius:10px;
-    color: #808080;
-    font-weight:$normal;
+  form {
+    .form-select,
+    .form-control {
+      border: 1px solid $gray4;
+      height: 55px;
+      border-radius: 10px;
+      color: #808080;
+      font-weight: $normal;
     }
+  }
 }
-}
-.deposit-table{
-     background:$white;
-   border: 1px solid #F7F7F7;
-    border-radius:10px;
+.deposit-table {
+  background: $white;
+  border: 1px solid #f7f7f7;
+  border-radius: 10px;
 }
