--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -1,13 +1,12 @@
-        <nav class="navbar navbar-dark bg-dark d-lg-none">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#responsiveSidebar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                
-  <img src="assets/img/logo-red.png" alt="Logo">
-            </div>
-        </nav>
+<nav class="navbar navbar-dark bg-dark d-lg-none">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#responsiveSidebar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <img src="assets/img/logo-red.png" alt="Logo">
+  </div>
+</nav>
 <!-- Offcanvas -->
 <div class="sidebar offcanvas offcanvas-start offcanvas-lg" tabindex="-1" id="responsiveSidebar">
   <div class="text-center py-4 d-none d-lg-block">
@@ -17,7 +16,7 @@
     <h5 class="offcanvas-title">
       <img src="assets/img/logo-red.png" alt="Logo">
     </h5>
-    <button  type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
 
     </button>
   </div>
