--- a/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
@@ -5,7 +5,7 @@
         <ng-container *ngSwitchCase="'depositor'">
           <ng-container *ngIf="!(depositorId && depositor); else showEditDepositor">
             <div>
-              <img [src]="item.icon" class="mb-2"/>
+              <img [src]="item.icon" class="mb-2" />
               <div>
                 <h5 class="mb-1">{{ item.title }}</h5>
                 <p class="text-muted mb-0">{{ item.description }}</p>
@@ -18,7 +18,7 @@
         <ng-container *ngSwitchCase="'beneficiary'">
           <ng-container *ngIf="!(beneId && beneficiary); else showEditBeneficiary">
             <div>
-              <img [src]="item.icon" class="mb-2"/>
+              <img [src]="item.icon" class="mb-2" />
               <div>
                 <h5 class="mb-1">{{ item.title }}</h5>
                 <p class="text-muted mb-0">{{ item.description }}</p>
@@ -33,28 +33,49 @@
       <ng-template #showEditDepositor>
         <div class="mt-3">
           <div class="d-flex justify-content-between">
-                 <h5 class="mb-1">Depositor Details</h5>
-             <button type="button" class="border-0 bg-transparent">
-          <img src="assets/img/edit2.png">
-          </button>
+            <h5 class="mb-1">Depositor Details</h5>
+            <button type="button" class="border-0 bg-transparent">
+              <img src="assets/img/edit2.png">
+            </button>
           </div>
-     
-          <div class="d-flex justify-content-between"> <p class="mb-0">Depositor Company Name:</p><p class="mb-0">{{ depositor.company_name }}</p></div>
-           <div class="d-flex justify-content-between"> <p class="mb-0">Depositor Company PAN:</p><p class="mb-0">{{ depositor.company_pan }}</p></div>
-                 <div class="d-flex justify-content-between"> <p class="mb-0">Depositor CIN:</p><p class="mb-0">{{ depositor.company_cin }}</p></div>
-       
+
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Depositor Company Name:</p>
+            <p class="mb-0">{{ depositor.company_name }}</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Depositor Company PAN:</p>
+            <p class="mb-0">{{ depositor.company_pan }}</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Depositor CIN:</p>
+            <p class="mb-0">{{ depositor.company_cin }}</p>
+          </div>
+
         </div>
       </ng-template>
 
       <ng-template #showEditBeneficiary>
         <div class="mt-3">
-          <h3>Beneficiary Details</h3>
-          <p class="mb-1">Company Name: {{ beneficiary.company_name }}</p>
-          <p class="mb-1">Company PAN: {{ beneficiary.company_pan }}</p>
-          <p class="mb-1">Company CIN: {{ beneficiary.company_cin }}</p>
-          <button type="button" class="btn btn-outline-secondary btn-sm">
-            Edit
-          </button>
+          <div class="d-flex justify-content-between">
+            <h5 class="mb-1">Beneficiary Details</h5>
+            <button type="button" class="border-0 bg-transparent">
+              <img src="assets/img/edit2.png">
+            </button>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Depositor Company Name:</p>
+            <p class="mb-0">{{ beneficiary.company_name }}</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Company PAN:</p>
+            <p class="mb-0">{{ beneficiary.company_pan }}</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="mb-0">Company CIN:</p>
+            <p class="mb-0">{{ beneficiary.company_cin }}</p>
+          </div>
+
         </div>
       </ng-template>
 
