--- a/src/assets/scss/layouts/_sidebar.scss
+++ b/src/assets/scss/layouts/_sidebar.scss
@@ -39,3 +39,34 @@
 //     padding-left: 250px; /* Adjust according to sidebar width */
 //   }
 // }
+
+.subMenu {
+z-index: 9;
+    position: fixed;
+    left: 290px;
+    min-width: 238px;
+    width: auto;
+    margin-top: -50px;
+    border-radius: 10px !important;
+    box-shadow: 0px 0px 20px 0px rgba(51, 51, 51, 0.1882352941);
+    background-color: white;
+    padding: 10px 0;
+    border: 1px solid #f4f4f4;
+
+  @media (max-width: 992px) {
+    left: 0;
+    margin-top: 5px;
+    width: 97%;
+    margin-bottom: 10px;
+    position: static;
+  }
+ul{
+  li{
+    .nav-link{
+    color:$dark-blue;
+        padding: 9px 0 9px 0;
+    }
+
+  }
+}
+}
