--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -7,11 +7,11 @@
     <img src="assets/img/logo-red.png" alt="Logo">
   </div>
 </nav>
-  <li class="nav-item theme-logo">
+  <!-- <li class="nav-item theme-logo d-lg-none list-unstyled">
       <a (click)="onSideBar(dashboardStatic, 0)" class="d-flex align-items-center">
         <span><img src="assets/assets/img/logo.png" /></span>
       </a>
-    </li>
+    </li> -->
 <div class="sidebar offcanvas offcanvas-start offcanvas-lg" tabindex="-1" id="responsiveSidebar">
   <div class="text-center py-4 d-none d-lg-block">
     <img src="assets/img/logo-red.png" alt="Logo">
