--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -66,6 +66,23 @@
           </a>
         </li>
       </ng-container> -->
+      
     </ul>
+  </div>
+  <div class="m-auto">
+    <a href="javascript:void(0);" class="" (click)="logout()">
+      <div class="d-flex">
+        <svg id="logout" xmlns="http://www.w3.org/2000/svg" width="24" height="23.905" viewBox="0 0 24 23.905">
+          <path id="Path_268772" data-name="Path 268772"
+            d="M315.23,48.215a3.415,3.415,0,0,0-3.415-3.415h-7.684a3.415,3.415,0,0,0-3.415,3.415V51.4a1.138,1.138,0,0,0,2.277,0V48.215a1.138,1.138,0,0,1,1.138-1.138h7.684a1.138,1.138,0,0,1,1.138,1.138V65.29a1.138,1.138,0,0,1-1.138,1.138h-7.684a1.138,1.138,0,0,1-1.138-1.138v-3.13a1.138,1.138,0,0,0-2.277,0v3.13a3.415,3.415,0,0,0,3.415,3.415h7.684a3.415,3.415,0,0,0,3.415-3.415Z"
+            transform="translate(-291.23 -44.8)" fill="#586270" />
+          <path id="Path_268773" data-name="Path 268773"
+            d="M122.02,139.364a1.138,1.138,0,0,0-1.611,0l-5.976,5.976h0a1.138,1.138,0,0,0,0,1.708l5.976,5.976h0a1.139,1.139,0,1,0,1.611-1.611l-4.1-4.081h12.724a1.138,1.138,0,1,0,0-2.276H117.925l4.1-4.092a1.138,1.138,0,0,0,0-1.6Z"
+            transform="translate(-114.048 -134.241)" fill="#586270" />
+        </svg>
+ 
+        <span>Logout</span>
+      </div>
+    </a>
   </div>
 </div>
