--- a/src/app/pages/staff-management/role-management/role-list/role-list.component.html
+++ b/src/app/pages/staff-management/role-management/role-list/role-list.component.html
@@ -48,5 +48,5 @@
 </div> -->
 
 <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/roles/list'" [pageSize]="10"
-       [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
+       [httpHeaders]="httpHeaders" [customParams]="customParams"  (action)="onTableAction($event)">
         </dynamic-table>
