--- a/src/app/pages/staff-management/role-management/role-create/role-create.component.html
+++ b/src/app/pages/staff-management/role-management/role-create/role-create.component.html
@@ -18,35 +18,42 @@
         </nav>
     </div>
 </div> -->
-<div class="col-12">
-    <div class="permission-box p-3">
-        <form>
-            <div class="form-group mb-4">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Role Name" [value]="roleName"
-                       (change)="handleNameChange($event)">
-            </div>
-            <!-- <div class="form-group mb-4">
+<div class="wrapper">
+    <!-- Main Wrapper -->
+    <div class="main-container">
+        <div class="content-inside m-3">
+            <div class="row">
+            <div class="col-12">
+                <div class="permission-box p-3">
+                    <form>
+                        <div class="form-group mb-4">
+                            <label>Name</label>
+                            <input type="text" class="form-control" placeholder="Role Name" [value]="roleName"
+                                (change)="handleNameChange($event)">
+                        </div>
+                        <!-- <div class="form-group mb-4">
                 <ng-select [clearable]="false" [items]="userTypeMaster" bindLabel="name" bindValue="name"
                            placeholder="Select User Type" [(ngModel)]="userType"
                            (change)="onUserTypeChange($event)"></ng-select>
             </div> -->
-        </form>
+                    </form>
+                </div>
+            </div>
+            </div>
+            <!--    <div class="col-3">-->
+            <!--        <input type="text" class="form-control" [(ngModel)]="roleName">-->
+            <!--    </div>-->
+            <!--    <br>-->
+            <!--    <div class="col-3">-->
+            <!--        <ng-select [items]="userTypeMaster" bindLabel="name" bindValue="id" placeholder="Select User Type" [(ngModel)]="userType" (change)="onUserTypeChange($event)"></ng-select>-->
+            <!--    </div>-->
+            <!--    <br><br>-->
+
+
+            <app-permission-list [userType]="this.userType" [canSet]="true"
+                (emitter)="permissions = $event"></app-permission-list>
+            <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button>
+
+        </div>
     </div>
 </div>
-<!--    <div class="col-3">-->
-<!--        <input type="text" class="form-control" [(ngModel)]="roleName">-->
-<!--    </div>-->
-<!--    <br>-->
-<!--    <div class="col-3">-->
-<!--        <ng-select [items]="userTypeMaster" bindLabel="name" bindValue="id" placeholder="Select User Type" [(ngModel)]="userType" (change)="onUserTypeChange($event)"></ng-select>-->
-<!--    </div>-->
-<!--    <br><br>-->
-
-
-    <app-permission-list [userType]="this.userType" [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
-    <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button>
-
-
-                    
-            
