--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -48,6 +48,14 @@
         </div>
     </div>
 </div> -->
+<div class="wrapper">
+  <!-- Main Wrapper -->
+  <div class="main-container">
+    <div class="content-inside m-3">
 <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/staff/list'" [pageSize]="10"
        [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
         </dynamic-table>
+
+        </div>
+        </div>
+        </div>
