--- a/src/app/pages/staff-management/role-management/role-list/role-list.component.html
+++ b/src/app/pages/staff-management/role-management/role-list/role-list.component.html
@@ -46,7 +46,13 @@
     </div>
   </div>
 </div> -->
-
-<dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/roles/list'" [pageSize]="10"
-       [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
-        </dynamic-table>
+<div class="wrapper">
+  <!-- Main Wrapper -->
+  <div class="main-container">
+    <div class="content-inside m-3">
+      <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/roles/list'" [pageSize]="10"
+        [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
+      </dynamic-table>
+    </div>
+  </div>
+</div>
