--- a/src/app/pages/staff-management/role-management/role-create/role-create.component.html
+++ b/src/app/pages/staff-management/role-management/role-create/role-create.component.html
@@ -44,7 +44,7 @@
 <!--    <br><br>-->
 
 
-    <app-permission-list [userType]="this.userType" [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
+    <app-permission-list [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
     <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button>
 
 
