--- a/src/assets/scss/layouts/_sidebar.scss
+++ b/src/assets/scss/layouts/_sidebar.scss
@@ -4,31 +4,31 @@
 
 .sidebar {
   max-width: 297px;
-  background-color:$dark-blue;
+  background-color: $dark-blue;
+  .ps-height {
+    height: calc(80vh - 71px);
+  }
   .nav-link {
-  color:$white;
-      padding: 14px 0 14px 64px;
-  span{
-    svg{
-        stroke:$white;
+    color: $white;
+    padding: 14px 0 14px 40px;
+    span {
+      svg {
+        stroke: $white;
+      }
+    }
+  }
+
+  @media (min-width: 992px) {
+    &.offcanvas-lg {
+      position: fixed;
+      left: 0;
+      transform: none !important;
+      visibility: visible !important;
+      z-index: 1045;
+      background-color: $dark-blue !important;
     }
   }
 }
-
-
-
-@media (min-width: 992px) {
-  &.offcanvas-lg {
-    position: fixed;
-    left: 0;
-    transform: none !important;
-    visibility: visible!important;
-    z-index: 1045;
-    background-color:$dark-blue!important;
-  }
-}
-}
-
 
 // body {
 //   padding-left: 0;
@@ -41,17 +41,17 @@
 // }
 
 .subMenu {
-z-index: 9;
-    position: fixed;
-    left: 290px;
-    min-width: 238px;
-    width: auto;
-    margin-top: -50px;
-    border-radius: 10px !important;
-    box-shadow: 0px 0px 20px 0px rgba(51, 51, 51, 0.1882352941);
-    background-color: white;
-    padding: 10px 0;
-    border: 1px solid #f4f4f4;
+  z-index: 9;
+  position: fixed;
+  left: 290px;
+  min-width: 238px;
+  width: auto;
+  margin-top: -50px;
+  border-radius: 10px !important;
+  box-shadow: 0px 0px 20px 0px rgba(51, 51, 51, 0.1882352941);
+  background-color: white;
+  padding: 10px 0;
+  border: 1px solid #f4f4f4;
 
   @media (max-width: 992px) {
     left: 0;
@@ -60,13 +60,12 @@ z-index: 9;
     margin-bottom: 10px;
     position: static;
   }
-ul{
-  li{
-    .nav-link{
-    color:$dark-blue;
+  ul {
+    li {
+      .nav-link {
+        color: $dark-blue;
         padding: 9px 0 9px 0;
+      }
     }
-
   }
-}
 }
