Intergrated dynamic table as per the role list manage ment module

--- a/src/app/pages/staff-management/role-management/role-create/role-create.component.html
+++ b/src/app/pages/staff-management/role-management/role-create/role-create.component.html
@@ -67,8 +67,8 @@
 <!--    <br><br>-->
 
 
-    <app-permission-list [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
-    <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button>
+    <!-- <app-permission-list [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
+    <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button> -->
 
 
                     
