--- a/src/app/pages/staff-management/role-management/role-list/role-list.component.html
+++ b/src/app/pages/staff-management/role-management/role-list/role-list.component.html
@@ -49,9 +49,13 @@
 <div class="wrapper">
   <!-- Main Wrapper -->
   <div class="main-container">
+      <div class="d-flex justify-content-between my-3">
+            <h5 class="mt-3 text-primary">Role List</h5>
+            <button class="btn btn-primary" [routerLink]="'/staff/add'"> Add Role</button>
+        </div>
     <div class="content-inside m-3">
     <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/roles/list'" [pageSize]="10"
-       [httpHeaders]="httpHeaders" [customParams]="customParams"  (action)="onTableAction($event)">
+      [showHeader]="false"   [httpHeaders]="httpHeaders" [customParams]="customParams"  (action)="onTableAction($event)">
         </dynamic-table>
     </div>
   </div>
