--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -49,13 +49,17 @@
     </div>
 </div> -->
 <div class="wrapper">
-  <!-- Main Wrapper -->
-  <div class="main-container">
-    <div class="content-inside m-3">
-<dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/staff/list'" [pageSize]="10"
-       [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
-        </dynamic-table>
+    <!-- Main Wrapper -->
+    <div class="main-container">
+        <div class="d-flex justify-content-between my-3">
+            <h5 class="mt-3 text-primary">Staff List</h5>
+            <button class="btn btn-primary" [routerLink]="'/staff/add-staff'"> Add Staff</button>
+        </div>
+        <div class="content-inside m-3">
+            <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
+            [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
+            </dynamic-table>
 
         </div>
-        </div>
-        </div>
+    </div>
+</div>
