--- a/src/app/pages/top-bar/top-bar.component.html
+++ b/src/app/pages/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <div class="topbar">
   <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center">
-      <h5 class="text-primary m-0">Dashboard</h5>
+      <h5 class="text-primary m-0">{{_titleName}}</h5>
       <ul class="navbar-item d-flex align-items-center mb-0 gap-3">
         <li>
           <div class="position-relative"><i class="fa-regular fa-bell"></i><span class="badge-notification">0</span>
