--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -2,18 +2,13 @@
   <!-- Main Wrapper -->
   <div class="main-container">
     <div class="content-inside m-3" *ngIf="formState == 'user'">
-    <div class="row">
-        <div class="col-12">
-            <div class="page-title"> {{editable ? 'Edit' : 'Add'}} Staff</div>
-            <div class="box-main my-4 p-4">
-                <div class="request-container">
-                    <section class="form-section">
+                   <div class="page-title"> {{editable ? 'Edit' : 'Add'}} Staff</div>
                         <form [formGroup]="addStaffForm">
-                            <div class="row">
+                      <div class="row g-3">
                                 <div class="col-3">
-                                    <div class="form-row">
+                                     <div class="form-group">
                                         <label>Role*</label>
-                                        <select [disabled]="editable" class="form-control" formControlName="role_id">
+                                        <select [disabled]="editable" class="form-select" formControlName="role_id">
                                             <option selected value="" disabled>Please Select Role</option>
                                             <option [value]="item.id" *ngFor="let item of roleList?.data">
                                                 {{item.name}}
@@ -25,18 +20,18 @@
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <div class="form-row">
+                                     <div class="form-group">
                                         <label>Name*</label>
-                                        <input type="text" placeholder="Enter name" formControlName="name" />
+                                        <input type="text" class="form-control" placeholder="Enter name" formControlName="name" />
                                         <app-show-errors [ctrl]="addStaffForm.get('name')"
                                             [requiredMesg]="'Name is Required'">
                                         </app-show-errors>
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <div class="form-row">
+                                     <div class="form-group">
                                         <label>Username*</label>
-                                        <input type="text" placeholder="Enter username" formControlName="username" />
+                                        <input type="text" class="form-control"  placeholder="Enter username" formControlName="username" />
                                         <app-show-errors [ctrl]="addStaffForm.get('username')"
                                             [requiredMesg]="'Username is Required'">
                                         </app-show-errors>
@@ -44,18 +39,18 @@
                                 </div>
 
                                 <div class="col-3">
-                                    <div class="form-row">
+                                     <div class="form-group">
                                         <label>Email*</label>
-                                        <input type="text" placeholder="Enter email" formControlName="email" />
+                                        <input class="form-control"  type="text" placeholder="Enter email" formControlName="email" />
                                         <app-show-errors [ctrl]="addStaffForm.get('email')"
                                             [requiredMesg]="'Email is Required'">
                                         </app-show-errors>
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <div class="form-row">
+                                     <div class="form-group">
                                         <label>Phone*</label>
-                                        <input [appInputRestriction]="'integer'" maxlength="10" type="text"
+                                        <input class="form-control"  [appInputRestriction]="'integer'" maxlength="10" type="text"
                                             placeholder="Enter phone" formControlName="phone" />
                                         <app-show-errors [ctrl]="addStaffForm.get('phone')"
                                             [requiredMesg]="'Phone is Required'">
@@ -63,9 +58,9 @@
                                     </div>
                                 </div>
                                 <div class="col-3">
-                                    <div class="form-row">
+                                    <div class="form-group">
                                         <label>Password{{editable ? '' : '*'}}</label>
-                                        <input type="text" placeholder="Enter password" formControlName="password" />
+                                        <input class="form-control"  type="text" placeholder="Enter password" formControlName="password" />
                                         <app-show-errors [ctrl]="addStaffForm.get('password')"
                                             [requiredMesg]="'Password is Required'">
                                         </app-show-errors>
@@ -86,11 +81,6 @@
 
                             </div>
                         </form>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 </div>
 <div *ngIf="formState == 'permissions'" style="background: white">
