--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -55,11 +55,11 @@
             <h5 class="mt-3 text-primary">Staff List</h5>
             <button class="btn btn-primary" [routerLink]="'/staff/add-staff'"> Add Staff</button>
         </div>
-        <div class="content-inside m-3">
+        <!-- <div class="content-inside m-3">
             <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
             [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
             </dynamic-table>
 
-        </div>
+        </div> -->
     </div>
 </div>
